# dcui

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml  lint.yml  linux.yml  release.yml
src/: events.rs  footer.rs  help.rs  main.rs  monitors.rs  settings.rs  sidebar.rs  tui.rs  utils.rs
src/tui/: footer.rs  help.rs  info.rs  mod.rs  settings.rs  sidebar.rs
