[package]
name = "dcui"
version = "0.1.0"
authors = ["Turiiya"]
repository = "https://github.com/ttytm/dcui"
license = "ISC"
description = "Minimal TUI application for controlling external displays"
edition = "2021"
rust-version = "1.74.0"

[dependencies]
anyhow = "1.0"
ddc-hi = "0.4"
ratatui = "0.29"

[profile.release]
strip = true
lto = true
